@@ -29,6 +29,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #17555: Fix ForkAwareThreadLock so that size of after fork
+  registry does not grow exponentially with generation of process.
+
 - Issue #17707: multiprocessing.Queue's get() method does not block for short
   timeouts.
 
